[package]
name = "stof-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
bytes = "1.10.1"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
http-auth-basic = "0.3.5"
nanoid = "0.4.0"
regex = "1.11.1"
stof = "0.3.20"
stof-http = "0.2.3"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = "0.6.2"
tower_governor = "0.6.0"
walkdir = "2.5.0"
zip = "2.2.3"
